# server/src/main/kotlin/com/sangyoon/parkingpass/parking/repository/GateDeviceRepository.kt
@@ -5,4 +5,5 @@ import com.sangyoon.parkingpass.parking.model.GateDevice
 interface GateDeviceRepository {
     fun findByDeviceKey(deviceKey: String): GateDevice?
     fun save(device: GateDevice): GateDevice
+    fun findAllByParkingLotId(parkingLotId: Long): List<GateDevice>
 }
