# server/src/main/resources/openapi/generated.json
@@ -8,6 +8,70 @@
         "license": "Apache/2.0"
     },
     "paths": {
+        "/api/v1/gates": {
+            "get": {
+                "summary": "게이트 목록 조회",
+                "parameters": [
+                    {
+                        "name": "parkingLotId",
+                        "in": "query",
+                        "description": "주차장 ID",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "List<GateResponse> 게이트 목록",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/GateResponse"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Gates"
+                ]
+            }
+        },
+        "/api/v1/gates/register": {
+            "post": {
+                "summary": "게이트 등록",
+                "requestBody": {
+                    "description": "RegisterGateRequest 게이트 정보",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/RegisterGateRequest"
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "Gates"
+                ],
+                "responses": {
+                    "201": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/GateResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/health": {
             "get": {
                 "summary": "HealthCheck",
@@ -212,6 +276,59 @@
     },
     "components": {
         "schemas": {
+            "GateResponse": {
+                "type": "object",
+                "properties": {
+                    "id": {
+                        "type": "integer"
+                    },
+                    "parkingLotId": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "deviceKey": {
+                        "type": "string"
+                    },
+                    "direction": {
+                        "type": "object",
+                        "properties": {
+                            "name": {
+                                "type": "string"
+                            },
+                            "ordinal": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }
+            },
+            "RegisterGateRequest": {
+                "type": "object",
+                "properties": {
+                    "parkingLotId": {
+                        "type": "integer"
+                    },
+                    "name": {
+                        "type": "string"
+                    },
+                    "deviceKey": {
+                        "type": "string"
+                    },
+                    "direction": {
+                        "type": "object",
+                        "properties": {
+                            "name": {
+                                "type": "string"
+                            },
+                            "ordinal": {
+                                "type": "integer"
+                            }
+                        }
+                    }
+                }
+            },
             "PlateDetectedRequest": {
                 "type": "object",
                 "properties": {
